# OpenVX-NN-Samples

./: LICENSE  README.md
inception-v3/: CMakeLists.txt  annmodule.cpp  jpg_to_raw.py  net.gdf  raw_to_class.py
inception-v3/bias/: classifier.f32  conv1_3x3_s2_scale.f32  conv2_3x3_s1_bn.f32  conv2_3x3_s1_scale.f32  conv3_3x3_s1_bn.f32  conv3_3x3_s1_scale.f32  conv4_3x3_bn.f32  conv4_3x3_reduce_bn.f32  conv4_3x3_reduce_scale.f32  conv4_3x3_scale.f32  inception_a1_1x1_bn.f32  inception_a1_1x1_scale.f32  inception_a1_3x3_1_bn.f32  inception_a1_3x3_1_scale.f32  inception_a1_3x3_2_bn.f32  inception_a1_3x3_2_scale.f32  inception_a1_3x3_reduce_bn.f32  inception_a1_3x3_reduce_scale.f32  inception_a1_5x5_bn.f32  inception_a1_5x5_reduce_bn.f32  inception_a1_5x5_reduce_scale.f32  inception_a1_5x5_scale.f32  inception_a1_pool_proj_bn.f32  inception_a1_pool_proj_scale.f32  inception_a2_1x1_bn.f32  inception_a2_1x1_scale.f32  inception_a2_3x3_1_bn.f32  inception_a2_3x3_1_scale.f32  inception_a2_3x3_2_bn.f32  inception_a2_3x3_2_scale.f32  inception_a2_3x3_reduce_bn.f32  inception_a2_3x3_reduce_scale.f32  inception_a2_5x5_bn.f32  inception_a2_5x5_reduce_bn.f32  inception_a2_5x5_reduce_scale.f32  inception_a2_5x5_scale.f32  inception_a2_pool_proj_bn.f32  inception_a2_pool_proj_scale.f32  inception_a3_1x1_bn.f32  inception_a3_1x1_scale.f32  (+148 more)
inception-v3/weights/: conv1_3x3_s2.f32  conv2_3x3_s1.f32  conv2_3x3_s1_bn.f32  conv3_3x3_s1.f32  conv3_3x3_s1_bn.f32  conv4_3x3.f32  conv4_3x3_bn.f32  conv4_3x3_reduce.f32  conv4_3x3_reduce_bn.f32  inception_a1_1x1.f32  inception_a1_1x1_bn.f32  (+174 more)
(+46 files in other folders)
